[tool.poetry]
name = "quiz-app"
version = "0.1.0"
description = "Backend for Quiz App"
license = "MIT"
authors = ["Matias B"]
readme = "README.md"
repository = "https://github.com/mbrignone/quiz-app"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.3"
poethepoet = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "uvicorn app.main:app"
test = "pytest --version"
