# Ruff configuration
[tool.ruff]
exclude = ["alembic/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # isort
    "I",
]


# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pytest_env]
ENVIRONMENT = "test"
USE_ALEMBIC = false
USE_SQLITE = true

[tool.coverage.run]
branch = true
concurrency = ["greenlet", "thread"]
source = ["app/api"]
omit = ["app/tests/*"]


# Poetry configuration
[tool.poetry]
name = "quiz-app"
version = "0.1.0"
description = "Backend for Quiz App"
license = "MIT"
authors = ["Matias B"]
repository = "https://github.com/mbrignone/quiz-app"
# readme = "README.md"
# packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.0.3"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
alembic = "^1.12.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
poethepoet = "^0.24.1"
pre-commit = "^3.5.0"
aiosqlite = "^0.19.0"
mypy = "^1.6.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-env = "^1.1.1"
factory-boy = "^3.3.0"
async-factory-boy = "^1.0.1"
devtools = "^0.12.2"
pytest-cov = "^4.1.0"
dirty-equals = "^0.7.1.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "python app/main.py"
test = "pytest app/tests/ -v --cov --cov-report=term-missing"
lint = "ruff check ."
format = "ruff format ."
precommit = "pre-commit run --all-files"
